Colaboratory를 통해 생성됨

--- a/DLW04.ipynb
+++ b/DLW04.ipynb
@@ -81,6 +81,7 @@
         "display(video)"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "r4bGc9Zc-Suu"
       },
       "execution_count": null,
@@ -113,6 +114,7 @@
         "display(widgets.HBox([image, widgets.VBox(buttons)]))\n"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "NbPqRcZ_5O9H"
       },
       "execution_count": null,
@@ -272,7 +274,7 @@
         "a2 = 3.0      #float\n",
         "a3 = \"3\"      #string\n",
         "\n",
-        "print(type(a1)) #type(variabel)\n",
+        "print(type(a1)) # type(variable)\n",
         "print(type(a2))\n",
         "print(type(a3))"
       ],
@@ -309,14 +311,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "input()\n",
+        "print()\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "aVS3q3HoiGH-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "age = input(\"How old are you?\")\n",
-        "response = f\"Oh, you're {age} !\"\n",
+        "response = f\"Oh, you're {age}! I'm 17. \"   # f\".....{variable}\"\"\n",
         "print(response)"
       ],
       "metadata": {
-        "id": "3amHTFjHhzPJ"
+        "id": "Ml3p09zVhvqh"
       },
       "execution_count": null,
       "outputs": []
@@ -335,10 +349,19 @@
       "source": [
         "# An example of a string\n",
         "name = input()  # A pop-up box will appear and wait for your input. Type a name.\n",
-        "print(\"Hello, %s!\"%name) #print (f\"hello, [name])"
+        "print(\"Hello, %s!\"%name)  #print(f\"Hello, {name}\")"
       ],
       "metadata": {
         "id": "xMi4lfEXnYk8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uUX-eETGXQ0E"
       },
       "execution_count": null,
       "outputs": []
@@ -353,12 +376,39 @@
         "It specifies how different software components should interact and communicate with each other. \\\n",
         "Essentially, an API is a way for different software applications to talk to one another.\n",
         "\"\"\"\n",
-        "words = mytext.split()\n",
+        "words = mytext.split( )\n",
         "print(\"Number of words: \",len(words))\n",
         "print(\"My text: \", mytext)"
       ],
       "metadata": {
         "id": "51HrTLk_nfKz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "Upto here (4/2)"
+      ],
+      "metadata": {
+        "id": "CZoKoOkKkiBE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mytext = input()\n",
+        "words = mytext.split()\n",
+        "sentens = mytext.split(\".\")\n",
+        "print (len(mytext))\n",
+        "print(\"N of characts: \",len(mytext))\n",
+        "print(\"N of words: \",len(words))\n",
+        "print(\"N of sentences:\",len(sentens))"
+      ],
+      "metadata": {
+        "id": "YR13RIStXzco"
       },
       "execution_count": null,
       "outputs": []
@@ -391,7 +441,7 @@
       "cell_type": "code",
       "source": [
         "# Accessing a list\n",
-        "print(\"First book: \", favorite_books[0])"
+        "print(\"First book: \", favorite_books[2])"
       ],
       "metadata": {
         "id": "jHeZkpFZojK5"
@@ -415,7 +465,11 @@
         "empty_list = []\n",
         "\n",
         "# Creating a list with some elements\n",
-        "fruits = [\"apple\", \"banana\", \"cherry\"]\n"
+        "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+        "\n",
+        "empty_list=fruits\n",
+        "\n",
+        "empty_list[1]"
       ],
       "metadata": {
         "id": "lsimZTSWo3GO"
